// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prices.utils fetchPrices request prices for contracts returns a price map of requested token prices in usd 1`] = `
Object {
  "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28": Object {
    "usd": 43500,
  },
  "0x3472A5A71965499acd81997a54BBA8D852C6E53d": Object {
    "usd": 10,
  },
}
`;

exports[`prices.utils fetchPrices request prices for look up names returns a price map of requested token prices in usd 1`] = `
Object {
  "badger": Object {
    "usd": 10,
  },
  "wrapped-bitcoin": Object {
    "usd": 43500,
  },
}
`;
